manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barbo-anwar-frontend
  namespace: grupp1
  labels:
    app: barbo-anwar-guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: barbo-anwar-frontend
  template:
    metadata:
      labels:
        app: barbo-anwar-frontend
    spec:
      containers:
      - name: frontend
        # OBS: Ändrat till anwarm391 (små bokstäver)
        image: ghcr.io/anwarm391/barbo-anwar-guestbook-argocd/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: 128Mi
            cpu: 200m
          requests:
            memory: 64Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: barbo-anwar-frontend
  namespace: grupp1
spec:
  ports:
  - port: 8080
  selector:
    app: barbo-anwar-frontend
