manifests/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barbo-anwar-postgresql
  namespace: grupp1
  labels:
    app: barbo-anwar-guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barbo-anwar-postgresql
  template:
    metadata:
      labels:
        app: barbo-anwar-postgresql
    spec:
      containers:
      - name: postgresql
        image: registry.redhat.io/rhel9/postgresql-16:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-data
          mountPath: /var/lib/pgsql/data
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 256Mi
            cpu: 250m
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: barbo-anwar-postgresql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: barbo-anwar-postgresql
  namespace: grupp1
spec:
  ports:
  - port: 5432
  selector:
    app: barbo-anwar-postgresql
